2002-09-23  Paul D. Smith  <psmith@gnu.org>

	* scripts/features/escape: Test handling of escaped comment
	characters in targets and prerequisites.

2002-09-18  Paul D. Smith  <psmith@gnu.org>

	* scripts/features/export: Test export/unexport of multiple
	variables in a single command.

2002-09-17  Paul D. Smith  <psmith@gnu.org>

	* scripts/features/targetvars: Tests for Bug #940: test
	target-specific and pattern-specific variables in conjunction with
	double-colon targets.

2002-09-10  Paul D. Smith  <psmith@gnu.org>

	* test_driver.pl (compare_output): Match the new format for time
	skew error messages.

	* scripts/features/export: Created.  Add tests for export/unexport
	capabilities, including exporting/unexporting expanded variables.

	* scripts/features/conditionals: Add a test for expanded variables
	in ifdef conditionals.

2002-09-04  Paul D. Smith  <psmith@gnu.org>

	* scripts/features/reinvoke: Change touch/sleep combos to utouch
	invocations.
	* scripts/features/vpathgpath: Ditto.
	* scripts/features/vpathplus: Ditto.
	* scripts/options/dash-n: Ditto.
	* scripts/targets/INTERMEDIATE: Ditto.
	* scripts/targets/SECONDARY: Ditto.

	* scripts/options/dash-t: Added a test for the -t bug fixed by
	Henning Makholm.  This test was also contributed by Henning.

	* scripts/misc/general4: Add a test suite for obscure algorithmic
	features of make.  First test: make sure creation subdirectories
	as prerequisites of targets works properly.

	* scripts/misc/version: Remove this bogus test.

2002-08-07  Paul D. Smith  <psmith@gnu.org>

	* scripts/misc/general3: Add a test for makefiles that don't end
	in newlines.

	* scripts/variables/special: Create tests for the special
	variables (.VARIABLES and .TARGETS).  Comment out .TARGETS test
	for now as it's not yet supported.

2002-08-01  Paul D. Smith  <psmith@gnu.org>

	* scripts/options/dash-B: Add a test for the new -B option.

2002-07-11  Paul D. Smith  <psmith@gnu.org>
