@@ -12,25 +12,58 @@
 # this routine controls the whole mess; each test suite sets up a few
 # variables and then calls &toplevel, which does all the real work.
 
-# $Id: test_driver.pl,v 1.5 2005/11/13 16:14:14 rockyb Exp $
+# $Id: test_driver.pl,v 1.6 2005/12/03 19:53:50 rockyb Exp $
 
+sub print_standard_usage
+{
+  my($plname, @moreusage) = @_;
 
-# The number of test categories we've run
-$categories_run = 0;
-# The number of test categroies that have passed
-$categories_passed = 0;
-# The total number of individual tests that have been run
-$total_tests_run = 0;
-# The total number of individual tests that have passed
-$total_tests_passed = 0;
-# The number of tests in this category that have been run
-$tests_run = 0;
-# The number of tests in this category that have passed
-$tests_passed = 0;
+  print "Usage:  
+perl $plname [options] [testname...] 
 
+options are: 
+  --detail   -- Detailed decription of a test is given before it is run.
+                Note: Not all tests have descriptions.
+  --debug    -- Show all system calls issued and the return status.
+                You might use this if a test fails.
+  --verbose
+  --detail
+  --keep     -- Do not remove any of the files generated by the tests.
+                Normally, files generated by tests are remove if the test
+                passes.
+  --profile
+  --usage
+  --help                 -- This help
+  --make *make-program*  -- location of GNU Make program to use in test(s).
 
-# Yeesh.  This whole test environment is such a hack!
-$test_passed = 1;
+A test names generally have a category name and a test within the category,
+e.g. \"features/default_names\" and these correspond to the perl programs
+in the scripts directory. However you can also give the script name, e.g.
+\"scripts/features/default_names\". Any trailing .pl extension in a test name
+is stripped as well as any portion of a test named which ends \"scripts/\".
+
+";
+
+}
+
+sub init() {
+  # The number of test categories we've run
+  $categories_run = 0;
+  # The number of test categroies that have passed
+  $categories_passed = 0;
+  # The total number of individual tests that have been run
+  $total_tests_run = 0;
+  # The total number of individual tests that have passed
+  $total_tests_passed = 0;
+  # The number of tests in this category that have been run
+  $tests_run = 0;
+  # The number of tests in this category that have passed
+  $tests_passed = 0;
+
+  # Yeesh.  This whole test environment is such a hack!
+  $test_passed = 1;
+
+}
 
 sub toplevel
 {
@@ -146,7 +179,7 @@ sub toplevel
 	  || &error ("Couldn't opendir $scriptpath/$dir: $!\n");
       @files = grep (!/^(\.\.?|CVS|RCS)$/, readdir (SCRIPTDIR) );
       closedir (SCRIPTDIR);
-      foreach $test (@files)
+      foreach my $test (@files)
       {
         next if $test =~ /(~|\.in|\.cvsignore)$/ || -d $test;
 	push (@TESTS, "$dir/$test");
@@ -256,86 +289,48 @@ sub get_osname
 
 sub parse_command_line
 {
-  @argv = @_;
+  my($help, $usage, $show_version);
 
-  # use @ARGV if no args were passed in
-
-  if (@argv == 0)
-  {
-    @argv = @ARGV;
-  }
+  use Getopt::Long;
+  $Getopt::Long::autoabbrev = 1;
 
   # look at each option; if we don't recognize it, maybe the suite-specific
   # command line parsing code will...
 
-  while (@argv)
-  {
-    $option = shift @argv;
-    if ($option =~ /^-debug$/i)
-    {
-      print "\nDEBUG ON\n";
-      $debug = 1;
-    }
-    elsif ($option =~ /^-usage$/i)
-    {
-      &print_usage;
-      exit 0;
-    }
-    elsif ($option =~ /^-(h|help)$/i)
-    {
-      &print_help;
-      exit 0;
-    }
-    elsif ($option =~ /^-profile$/i)
-    {
-      $profile = 1;
-    }
-    elsif ($option =~ /^-verbose$/i)
-    {
-      $verbose = 1;
-    }
-    elsif ($option =~ /^-detail$/i)
-    {
-      $detail = 1;
-      $verbose = 1;
-    }
-    elsif ($option =~ /^-keep$/i)
-    {
-      $keep = 1;
-    }
-    elsif (&valid_option($option))
-    {
-      # The suite-defined subroutine takes care of the option
-    }
-    elsif ($option =~ /^-/)
-    {
-      print "Invalid option: $option\n";
-      &print_usage;
-      exit 0;
-    }
-    else # must be the name of a test
-    {
-      $option =~ s/\.pl$//;
-      push(@TESTS,$option);
-    }
+  my $result = &GetOptions
+    (
+     'help'           => \$help,
+     'usage'          => \$usage,
+     'debug'          => \$debug,
+     'profile'        => \$profile,
+     'valgrind'       => \$valgrind,
+     'verbose'        => \$verbose,
+     'detail'         => \$detail,
+     'keep'           => \$keep,
+     'make=s'         => \$make_path
+    );
+
+  print "\nDEBUG ON\n" if $debug;
+  print_usage() if $usage;
+  print_help() if $help;
+
+  # Turn a filename into a script test name by dropping directory
+  # portion before optional /scripts (which is where all tests are
+  # located) and dropping trailing .pl (which is the extension on
+  # test names).
+
+  foreach my $test (@ARGV) {
+      $test =~ s/\.pl$//;
+      $test =~ s:^(.*/?)scripts/::;
+      push(@TESTS,$test);
   }
 }
 
-sub max
+sub max(@)
 {
-  local($num) = shift @_;
-  local($newnum);
-
-  while (@_)
-  {
-    $newnum = shift @_;
-    if ($newnum > $num)
-    {
-      $num = $newnum;
-    }
-  }
-
-  return $num;
+  my $max = shift @_;
+  map { $max = $_ if $max < $_ } @_;
+  return $max;
 }
 
 sub print_centered
@@ -357,8 +352,8 @@ sub print_banner
   local($len);
 
   $info = "Running tests for $testee on $osname\n";  # $testee is suite-defined
-  $len = &max (length ($line), length ($testee_version),
-               length ($banner_info), 73) + 5;
+  $len = max (length ($line), length ($testee_version),
+	      length ($banner_info), 73) + 5;
   $line = ("-" x $len) . "\n";
   if ($len < 78)
   {
@@ -510,73 +505,6 @@ sub delete
   }
 
   return 1;
-}
-
-sub print_standard_usage
-{
-  local($plname,@moreusage) = @_;
-  local($line);
-
-  print "Usage:  perl $plname [testname] [-verbose] [-detail] [-keep]\n";
-  print "                               [-profile] [-usage] [-help] "
-      . "[-debug]\n";
-  foreach $line (@moreusage)
-  {
-    print "                               $line\n";
-  }
-}
-
-sub print_standard_help
-{
-  local(@morehelp) = @_;
-  local($line);
-  local($tline);
-  local($t) = "      ";
-
-  $line = "Test Driver For $testee";
-  print "$line\n";
-  $line = "=" x length ($line);
-  print "$line\n";
-
-  &print_usage;
-
-  print "\ntestname\n"
-      . "${t}You may, if you wish, run only ONE test if you know the name\n"
-      . "${t}of that test and specify this name anywhere on the command\n"
-      . "${t}line.  Otherwise ALL existing tests in the scripts directory\n"
-      . "${t}will be run.\n"
-      . "-verbose\n"
-      . "${t}If this option is given, a description of every test is\n"
-      . "${t}displayed before the test is run. (Not all tests may have\n"
-      . "${t}descriptions at this time)\n"
-      . "-detail\n"
-      . "${t}If this option is given, a detailed description of every\n"
-      . "${t}test is displayed before the test is run. (Not all tests\n"
-      . "${t}have descriptions at this time)\n"
-      . "-profile\n"
-      . "${t}If this option is given, then the profile file\n"
-      . "${t}is added to other profiles every time $testee is run.\n"
-      . "${t}This option only works on VOS at this time.\n"
-      . "-keep\n"
-      . "${t}You may give this option if you DO NOT want ANY\n"
-      . "${t}of the files generated by the tests to be deleted. \n"
-      . "${t}Without this option, all files generated by the test will\n"
-      . "${t}be deleted IF THE TEST PASSES.\n"
-      . "-debug\n"
-      . "${t}Use this option if you would like to see all of the system\n"
-      . "${t}calls issued and their return status while running the tests\n"
-      . "${t}This can be helpful if you're having a problem adding a test\n"
-      . "${t}to the suite, or if the test fails!\n";
-
-  foreach $line (@morehelp)
-  {
-    $tline = $line;
-    if (substr ($tline, 0, 1) eq "\t")
-    {
-      substr ($tline, 0, 1) = $t;
-    }
-    print "$tline\n";
-  }
 }
 
 #######################################################################
@@ -1156,5 +1084,7 @@ sub get_tmpfile
 
   return ($tmp_filename . &num_suffix ($num_of_tmpfiles));
 }
+
+init();
 
 1;
